@@ -1,5 +1,8 @@
-* Wed Apr 21 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.6.2
-- Update GitLab ticket URLs in README
+* Thu Jun 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.6.2
+- Minor README updates
+  - Clarify versions of GitLab this modules is known to work with and
+    the steps a user can do to verify it works with a different version.
+  - Update GitLab ticket URLs.
 
 * Thu Jan 07 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.6.1
 - Fixed a bug in which the change_gitlab_root_password script did
